# cookiecutter-pelican-plugin

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml  tasks.py  {{cookiecutter.readme}}
{{cookiecutter.repo_name}}/.github/workflows/: main.yml
{{cookiecutter.repo_name}}/pelican/plugins/{{cookiecutter.package_name}}/: __init__.py
