[tool.poetry]
name = "{{ cookiecutter.distribution_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [{{ cookiecutter.authors }}]
license = "{{ cookiecutter.license }}"
readme = "{{ cookiecutter.readme }}"
keywords = [{{ cookiecutter.keywords }}]
repository = "{{ cookiecutter.repo_url }}"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: {{ cookiecutter.dev_status }}",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "{{ cookiecutter.repo_url }}/issues"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
pelican = "{{ cookiecutter.pelican_version }}"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^6.0"
flake8-black = "^0.3"
flake8-pyproject = "^1.2"
invoke = "^2.0"
isort = "^5.12"
livereload = "^2.6"
markdown = "^3.4"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-sugar = "^0.9"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "{{ cookiecutter.plugin_name }}"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
